--- a/src/components/Audio/Audio.module.css
+++ b/src/components/Audio/Audio.module.css
@@ -1,26 +1,38 @@
 .audio-container {
-  @apply z-50 cursor-pointer absolute right-[0.3125rem] bottom-[0.875rem] outline-none;
+  @apply z-50 cursor-pointer absolute left-[50%] bottom-[0.875rem] outline-none;
 }
-.audio-container-inner-container {
+.audio-container .audio-inner-container {
   @apply w-[3.75rem] h-[3.75rem] bg-black rounded-[50%] flex justify-center align-middle;
   transition: box-shadow 0.3s ease-in-out;
   background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
 }
-.audio-container-inner-container :hover, .audio-container-inner-container :focus, .audio-container-inner-container :visited, .audio-container-inner-container :active {
+.audio-container .audio-inner-container:hover, .audio-container .audio-inner-container:focus, .audio-container .audio-inner-container:visited, .audio-container .audio-inner-container:active {
   @apply outline-none;
   box-shadow: 0 0 12px 1.5px rgba(0, 0, 0, 0.15), 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .audio-app {
-  @apply relative width-[0.3125rem] height-[0.875rem] rounded-[50%];
+  @apply relative w-[0.3125rem] h-[0.875rem] rounded-[50%] outline-none;
+  box-shadow: none;
 }
-.audio-app .icon {
-  @apply w-100 h-100 cursor-pointer absolute block;
+.audio-app .loader {
+  @apply left-[45%] absolute;
+  transform: translate(-50%, 45%);
 }
-.audio-app .icon .play {
-  transform: translate(50%, 30%);
+.audio-app .loader .spin {
+  @apply animate-spin;
 }
-.audio-app .icon .pause {
-  transform: translate(40%, 30%);
+.audio-app .loader .pulse {
+  @apply animate-pulse;
+}
+.audio-app .play {
+  transform: translate(-30%, 30%);
+}
+.audio-app .pause {
+  transform: translate(-45%, 35%);
+}
+.audio-app svg {
+  @apply w-8 leading-none;
+  box-shadow: none;
 }/*# sourceMappingURL=Audio.module.css.map */
