--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;/*# sourceMappingURL=index.css.map */
+@tailwind utilities;
+@layer components {
+  .stretched-link::after {
+    @apply absolute top-0 right-0 bottom-0 left-0 z-[1];
+    content: "";
+  }
+  .spinner-mask {
+    --spin-fill: white;
+    @apply animate-spin;
+  }
+}/*# sourceMappingURL=index.css.map */
