--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .stretched-link::after {
+        @apply absolute top-0 right-0 bottom-0 left-0 z-[1];
+        content: "";
+    }
+    
+    .spinner-mask {
+        --spin-fill: white;
+        @apply animate-spin
+    }
+}
