:musical_note: Added audio context
Now you can interact with the audio button and play the song.

--- a/src/components/Audio/Audio.module.css
+++ b/src/components/Audio/Audio.module.css
@@ -1,5 +1,6 @@
 .audio-container {
   @apply z-50 cursor-pointer absolute left-[50%] bottom-[0.875rem] outline-none;
+  transform: translateX(-50%);
 }
 .audio-container .audio-inner-container {
   @apply w-[3.75rem] h-[3.75rem] bg-black rounded-[50%] flex justify-center align-middle;
