:sparkles: Modified the styles
Giving a basic makeover

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  @apply h-full m-0 bg-no-repeat overflow-hidden;
-  background-image: linear-gradient(to right top, #8b31d6, #380c60, #6a24a6, #8b0077, #c75acc);
-  background-attachment: fixed;
+  :root {
+    --card-width: 20.3125rem; /* 325px */
+    --card-height: 27.1875rem; /* 435px */
+  }
 }
 @layer components {
+  *, *::after, *::before {
+    box-sizing: border-box;
+  }
+  body {
+    @apply h-full m-0 bg-no-repeat overflow-hidden;
+    background-image: linear-gradient(to right top, #8b31d6, #380c60, #6a24a6, #8b0077, #c75acc);
+    background-attachment: fixed;
+  }
   .stretched-link::after {
     @apply absolute top-0 right-0 bottom-0 left-0 z-[1];
     content: "";
