--- a/src/components/Audio/Audio.module.css
+++ b/src/components/Audio/Audio.module.css
@@ -1,5 +1,5 @@
 .audio-container {
-  @apply z-50 cursor-pointer absolute left-[50%] bottom-[0.875rem] outline-none;
+  @apply z-50 cursor-pointer fixed left-[50%] bottom-[0.875rem] outline-none;
   transform: translateX(-50%);
 }
 .audio-container .audio-inner-container {
@@ -14,7 +14,7 @@
 }
 
 .audio-app {
-  @apply relative w-[0.3125rem] h-[0.875rem] rounded-[50%] outline-none;
+  @apply relative w-[0.3125rem];
   box-shadow: none;
 }
 .audio-app .loader {
@@ -36,4 +36,35 @@
 .audio-app svg {
   @apply w-8 leading-none;
   box-shadow: none;
+}
+
+@media (max-height: 600px) and (min-width: 320px) {
+  .audio-container {
+    --left: calc(100% - 1.8rem);
+    @apply bottom-[unset] left-[var(--left)];
+  }
+  .audio-container .audio-inner-container {
+    @apply rounded-sm;
+  }
+}
+@media (max-height: 600px) and (min-width: 320px) and (max-width: 480px) {
+  .audio-container {
+    --left: calc(7%);
+    @apply top-[15%];
+  }
+}
+@media (max-height: 600px) and (min-width: 481px) {
+  .audio-container {
+    @apply top-[10%];
+  }
+}
+@media (max-height: 600px) and (max-width: 319px) {
+  .audio-container {
+    @apply hidden;
+  }
+}
+@media (max-height: 480px) {
+  .audio-container {
+    @apply hidden;
+  }
 }/*# sourceMappingURL=Audio.module.css.map */
