--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -59,4 +59,10 @@
 .imgset img {
   @apply rounded-[0.3125px] h-[var(--card-height)];
   box-shadow: 0px 6px 11px 7px rgba(0, 0, 0, 0.22);
+}
+
+@media (max-height: 480px) {
+  .card-bd {
+    @apply hidden;
+  }
 }/*# sourceMappingURL=Card.module.css.map */
