--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -74,3 +74,9 @@
         box-shadow: 0px 6px 11px 7px rgba(0, 0, 0, 0.22);
     }
 }
+
+@media (max-height: 480px){
+    .card-bd {
+        @apply hidden;
+    }
+}
