--- a/src/components/Unload/Unload.module.scss
+++ b/src/components/Unload/Unload.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     @apply h-[100vh];
-    background-image: linear-gradient(-105deg, #009acc, #363795);
+    background-image: linear-gradient(-105deg, #c75acc, #363795);
 }
 
 .text-area {
@@ -10,7 +10,21 @@
     transform: translate(-50%, -50%);
 
     p {
-        @apply text-slate-900 text-4xl tracking-tight font-extrabold sm:text-5xl dark:text-white;
-        font-family: 'Roboto', cursive;
+        @apply m-0;
+    }
+
+    .p1 {
+        @apply text-4xl font-extrabold text-white tracking-wider;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    .p2 {
+        @apply text-white text-xl font-normal mt-2 leading-5;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    .emoji { 
+        all: unset;
+        font-family: 'Segoe UI Emoji', sans-serif;
     }
 }
