--- a/src/components/Unload/Unload.module.css
+++ b/src/components/Unload/Unload.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 .container {
   @apply h-[100vh];
-  background-image: linear-gradient(-105deg, #c75acc, #363795);
+  background-image: linear-gradient(-105deg, #c75acc, #4042c0);
 }
 
 .text-area {
