--- a/src/components/Unload/Unload.module.scss
+++ b/src/components/Unload/Unload.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     @apply h-[100vh];
-    background-image: linear-gradient(-105deg, #c75acc, #363795);
+    background-image: linear-gradient(-105deg, #c75acc, #4042c0);
 }
 
 .text-area {
