--- a/src/components/Spinner/Spinner.module.css
+++ b/src/components/Spinner/Spinner.module.css
@@ -1,3 +1,7 @@
+html, body {
+  @apply m-0 p-0 h-full w-full;
+}
+
 .container {
   @apply h-[100vh];
   background-image: linear-gradient(-105deg, #009acc, #363795);
